#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
################################################################


2013-11-29  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999952 released.

        * Re-arranged some prerequisites in Makefile.PL.


2013-11-29  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999951 released.

        * Moved version ahead of Module::Metadata
          in Makefile.PL


2013-11-29  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999950 released.

        * Added Module::CoreList, Module::Load, Module::Metadata
          and version to prerequisites in Makefile.PL


2013-11-28  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999949 released.

        * Installing Module::Load::Conditional
          earlier in Makefile.PL for Unix builds.


2013-11-28  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999948 released.

        * Fixed Regex in Makefile.PL for Unix builds.


2013-11-28  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999947 released.

        * Added Locale::Maketext::Simple in Makefile.PL for Unix builds.

        * Added Test::Simple in Makefile.PL for Unix builds.


2013-11-28  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999946 released.

        * Added Params::Check in Makefile.PL for Unix builds.


2013-11-28  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999945 released.

        * Added IPC::Cmd in Makefile.PL for Unix builds.


2013-11-28  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999944 released.

        * Roll back some changes in Makefile.PL.
