@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 72685b0d9d652ae53b052e46f664598ce0f88ef2 ChangeLog
+SHA1 0b45f799a2a76c2a05f10e0e652eba250434a7ee ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 d910f2158f397101c20143f72890951dbff888b5 MANIFEST
-SHA1 8c50539332f915f2c3d31bf2f390cd3e04044790 META.yml
-SHA1 b3e73ff6a3825f6b7317816d06beec0e8f6f8d47 MYMETA.json
-SHA1 e6c889df8f1c455a973ca7157583f41cf121b4fb MYMETA.yml
-SHA1 b99ce466ceb335d10215733fb7cd3916fbdeb656 Makefile.PL
+SHA1 d6f1947695fb0b25af3ed4c22b9bf813613c07c8 META.yml
+SHA1 9f52257296b6dcf6b4542e37be698f8231bce13c MYMETA.json
+SHA1 260ef6a3a7b9f360dc7704912c2272b411d31ec9 MYMETA.yml
+SHA1 d98498d4920cf383f3042f1fce4fc51734ef6002 Makefile.PL
 SHA1 3963e2adaaaf4dabdd2d22748334db30cefedb97 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 c5096f77f7afdbddd504bb1f7b70e192a0700c4f bin/fullauto.pl
@@ -39,7 +39,7 @@ SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
 SHA1 225dc1fa8a31e86954f43fb8e6a2060c9c54e6f8 install_mozrepl_plugin.ahk
-SHA1 3a3d7712957738e6a166602cba3697ce9a9f6132 lib/Net/FullAuto.pm
+SHA1 f2f83bebe3d2cf641a4730c8a5dbf68d6338b69b lib/Net/FullAuto.pm
 SHA1 da4cad3f90b32301fad4f5a910b67b37c5105b49 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 966d316495dc2c924ba00e0eaa065391a8c967c5 lib/Net/FullAuto/Custom/README
 SHA1 931b73137675e23ff80148d72aa09415fdb164af lib/Net/FullAuto/Distro/fa_code.pm
@@ -56,11 +56,11 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.13 (Cygwin)
 
-iQEcBAEBAgAGBQJSmKPsAAoJEBa/9Pad787E0C0H/0UjYwuTZl6DU+R3NvrHOIiJ
-0bD09+61SwNZRIPfJX3DtpdejhDhJN8y+gDYr8nHiZ4ufuMknJtOxPkhRBo2G81F
-C34zuibe4ncExlI4GneyQkjfVxivBrYsk5TfcZI2P85e3wCD/F0UqwiLVBaYh8vo
-2WrA+mnpGrMdrdD4zWsIA2ebSRVSg7o6IIl56Dkm61sDtcCSgUALyp+ZL8Ew3N/Z
-A8lmeDo9d5YOoEpo7CT2IRUryVFZc0iJVDnjji9cablsslPGVsEXZSN39xq5qGXm
-B54a4zrRqs4zTDsw28yQtdXVkP31FVL2rJoeV6HqP95aoGVhYxaoxLjnCNTB6Sk=
-=7P2n
+iQEcBAEBAgAGBQJSmLRHAAoJEBa/9Pad787EsjEH/jIoYH7ndnR3uBTtE6D79h7c
+27NCVQ8DsMBo5XwblYHSzbIUajr7fZ3xbvZ5p+m4MwU6o8mnx61C+z3fP638d8tm
+gj+XeMbwDE94GL4OlL+g0hS+QPVKgKyqCVNpXwz0hI/EVsRq3R78+kaXQSreWxCb
+WDZh1Zr/r1JxzMP9Ha2/DD1Q+xrhXpXWMYf2I/u+ZxFCpo2rf0NacqNKaZC6BaCH
+7ugsOfuv2h10XZOscNV9UX3fJFnylfqjToePrqHAwMf4WA0B+bz1oXzvVcJ4GwCN
+iHDyTMrCxMeP4tVKz6pmOsH9CyJGcx9X7izV5ZmYxlGOMFRrD1Gp7k84frlZXYU=
+=WkBg
 -----END PGP SIGNATURE-----
